# pl

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pylint.yml  test.yml
src/: main.py
src/model/: __init__.py  model.py
src/pl_drafter/: __init__.py  net.py  pl_drafter.py
test/: test_loss.py  test_tensor.py
