[tool.poetry]
name = "pl"
version = "0.1.0"
description = "Research and experimental deep learning model for lol"
authors = ["lipeeeee <filipe.pereirafga@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
